Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-10-13 (SVN):
    * Updated some of the web links in the documents.

2011-10-09 (SVN):
    * quakedef.h: updated beta datestamp to 2011-10-09.

2011-10-09 (SVN):
    * server.h, world.c: Removed definition of DAMAGE_AIM which has never
      been used. Added comments about some other spawn and entity flags.

2011-10-09 (SVN):
    * cl_demo.c (CL_WriteDemoMessage): Removed the unnecessary check for
      cls.demorecording.

2011-10-08 (SVN):
    * r_main.c (R_EdgeDrawing): Better documentation of what is going
      on with the pointers going out of scope. Tidy up.

2011-10-08 (SVN):
    * hexenworld, R_DrawName: Fixed a typo in a comment.
    * hexenworld: documented what cl_doc global is.

2011-10-07 (SVN):
    * q_endian.h: Updates to endianism detection macro checks.

2011-09-24 (SVN):
    * Sys_mkdir: Reverted the strerror() output from DOS versions. Not
      really necessary for that platform, so they stay in for the unix
      versions for now.

2011-09-24 (SVN):
    * userdir.h: Define user directory name macros based on the target
      platform.

2011-09-24 (SVN):
    * Print strerror(errno) in case of failure in Sys_mkdir(). In
      Sys_GetUserdir(), call Sys_mkdir() with the crash flag set.

2011-09-22 (SVN):
    * gl_rsurf.c (R_DrawBrushModel): Add missing gl_zfix.value check to
      the commented out code (for completeness and for future reference.)

2011-09-22 (SVN):
    * midi_mac.c: Removed unused variable bMidiInited. Renamed bPaused
      to midi_paused.

2011-09-22 (SVN):
    * draw.c, gl_draw.c (Draw_ConsoleBackground): Some more tidy-up for
      version information printing.

2011-09-22 (SVN):
    * Xcode project file for Mac OS X: Updated from Steven. Deleted the
      unnecessary user files.

2011-09-22 (SVN):
    * screen.c, gl_screen.c, quakefs.h: Removed the unistd.h, io.h and
      io_msvc.h includes. They aren't necessary since the removal of